# nic_rpi4

./: .gitmodules  CMakeLists.txt  LICENSE.md  NIC_RPi4.camkes  NIC_RPi4.cpp  README.md  environment.cpp  environment.h
circle/include/: assert_old.h  circleos.h
circle/include/circle/: bcm2711.h  bcm2835.h  bcm54213.h  bcmpropertytags.h  macros.h  memio.h  netdevice.h  synchronize.h  sysconfig.h  types.h
circle/lib/: bcm54213.cpp  new.cpp  string.cpp
plat/rpi3/: plat_eth.camkes  plat_eth.cmake  plat_nic.camkes
plat/rpi4/: plat_eth.camkes  plat_eth.cmake  plat_nic.camkes  plat_nic.cmake
